agregado de nuevos sitio

--- a/ec_show.html
+++ b/ec_show.html
@@ -134,85 +134,7 @@
             <div class="text-center">
               <h2>Estos establecimientos confían en nosotros:</h2>
             </div>
-            <div class="flex_container_description">
-
-              <div class="flex_item">
-                <figure class="tech_item" id="eight_gagdet">
-                  <img src="img/icon/logo/lisa_burges.jpg" alt="">
-                  <figcaption>
-                    <h2>Lisa Burgers & Drinks</h2>
-                    <p>Rambla Pte. Wilson esquina Sarmiento</p>
-                  </figcaption>
-                </figure>
-              </div>
-
-              <div class="flex_item">
-                <figure class="tech_item" id="eight_gagdet">
-                  <img src="img/icon/logo/mirando_mundo.jpg" alt="">
-                  <figcaption>
-                    <h2>Mirando Mundos</h2>
-                    <p>Peatonal Sarandi 326</p>
-                  </figcaption>
-                </figure>
-              </div>
-              
-              <div class="flex_item">
-                <figure class="tech_item" id="eight_gagdet">
-                  <img src="img/icon/logo/temaki.jpg" alt="">
-                  <figcaption>
-                    <h2>Temaki - Sushi house</h2>
-                    <p>21 de Setiembre 2951</p>
-                  </figcaption>
-                </figure>
-              </div>
-
-              <div class="flex_item">
-                <figure class="tech_item" id="eight_gagdet">
-                  <img src="img/icon/logo/one_love.jpg" alt="">
-                  <figcaption>
-                    <h2>One Love</h2>
-                    <p>José María Montero 2683</p>
-                  </figcaption>
-                </figure>
-              </div>
-              <div class="flex_item">
-                <figure class="tech_item" id="eight_gagdet">
-                  <img src="img/icon/logo/pepito.jpg" alt="">
-                  <figcaption>
-                    <h2>Pepito Bar</h2>
-                    <p>Pedro F. Berro 1231</p>
-                    <p>Colonia 2000</p>
-                  </figcaption>
-                </figure>
-              </div>
-              <div class="flex_item">
-                <figure class="tech_item" id="eight_gagdet">
-                  <img src="img/icon/logo/secreto_igor.jpg" alt="">
-                  <figcaption>
-                    <h2>El Secreto de Igor</h2>
-                    <p>Guipuzcoa 318</p>
-                  </figcaption>
-                </figure>
-              </div>
-              <div class="flex_item">
-                <figure class="tech_item" id="eight_gagdet">
-                  <img src="img/icon/logo/patagonia.jpg" alt="">
-                  <figcaption>
-                    <h2>Patagonia Brewing Co.</h2>
-                    <p>Luis Alberto de Herrera 1193</p>
-                    <p>Buenos Aires 653</p>
-                  </figcaption>
-                </figure>
-              </div>
-              <div class="flex_item">
-                <figure class="tech_item" id="eight_gagdet">
-                  <img src="img/icon/logo/media_lunas.jpg" alt="">
-                  <figcaption>
-                    <h2>Medialunas Calentitas</h2>
-                    <p>21 de Setiembre 2982</p>
-                  </figcaption>
-                </figure>
-              </div>
+            <div class="flex_container_description establecimientos">
 
               <div class="flex_item">
                 <figure class="tech_item" id="eight_gagdet">
@@ -234,10 +156,30 @@
               </div>
               <div class="flex_item">
                 <figure class="tech_item" id="eight_gagdet">
-                  <img src="img/icon/logo/taberna_diablo.jpg" alt="">
+                  <img src="img/icon/logo/fellini.jpg" alt="">
                   <figcaption>
-                    <h2>La Taberna del Diablo</h2>
-                    <p>Av. Gonzalo Ramírez 2051</p>
+                    <h2>Fellini</h2>
+                    <p>José Martí 3408, Pocitos</p>
+                    <p>Arocena 2098, Carrasco</p>
+                  </figcaption>
+                </figure>
+              </div>
+              <div class="flex_item">
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/logo/one_love.jpg" alt="">
+                  <figcaption>
+                    <h2>One Love</h2>
+                    <p>José María Montero 2683</p>
+                  </figcaption>
+                </figure>
+              </div>
+              <div class="flex_item">
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/logo/patagonia.jpg" alt="">
+                  <figcaption>
+                    <h2>Patagonia Brewing Co.</h2>
+                    <p>Luis Alberto de Herrera 1193</p>
+                    <p>Buenos Aires 653</p>
                   </figcaption>
                 </figure>
               </div>
@@ -250,7 +192,106 @@
                   </figcaption>
                 </figure>
               </div>
-
+              <div class="flex_item">
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/logo/ohm.jpg" alt="">
+                  <figcaption>
+                    <h2>Ohm</h2>
+                    <p>Arocena 2098, Carrasco</p>
+                  </figcaption>
+                </figure>
+              </div>
+              <div class="flex_item">
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/logo/media_lunas.jpg" alt="">
+                  <figcaption>
+                    <h2>Medialunas Calentitas</h2>
+                    <p>21 de Setiembre 2982</p>
+                  </figcaption>
+                </figure>
+              </div>
+              <div class="flex_item">
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/logo/secreto_igor.jpg" alt="">
+                  <figcaption>
+                    <h2>El Secreto de Igor</h2>
+                    <p>Guipuzcoa 318</p>
+                  </figcaption>
+                </figure>
+              </div>
+              <div class="flex_item">
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/logo/lisa_burges.jpg" alt="">
+                  <figcaption>
+                    <h2>Lisa Burgers & Drinks</h2>
+                    <p>Rambla Pte. Wilson esquina Sarmiento</p>
+                  </figcaption>
+                </figure>
+              </div>
+              <div class="flex_item">
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/logo/choperia.jpg" alt="">
+                  <figcaption>
+                    <h2>La Choperia de 21</h2>
+                    <p>21 de Setiembre 2650</p>
+                  </figcaption>
+                </figure>
+              </div> 
+              <div class="flex_item">
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/logo/taberna_diablo.jpg" alt="">
+                  <figcaption>
+                    <h2>La Taberna del Diablo</h2>
+                    <p>Av. Gonzalo Ramírez 2051</p>
+                  </figcaption>
+                </figure>
+              </div>
+              <div class="flex_item">
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/logo/temaki.jpg" alt="">
+                  <figcaption>
+                    <h2>Temaki - Sushi house</h2>
+                    <p>21 de Setiembre 2951</p>
+                  </figcaption>
+                </figure>
+              </div>
+              <div class="flex_item">
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/logo/misiones.jpg" alt="">
+                  <figcaption>
+                    <h2>Las Misiones</h2>
+                    <p>25 de Mayo 449</p>
+                  </figcaption>
+                </figure>
+              </div>
+              <div class="flex_item">
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/logo/pepito.jpg" alt="">
+                  <figcaption>
+                    <h2>Pepito Bar</h2>
+                    <p>Pedro F. Berro 1231</p>
+                    <p>Colonia 2000</p>
+                  </figcaption>
+                </figure>
+              </div>
+              <div class="flex_item">
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/logo/katy.jpg" alt="">
+                  <figcaption>
+                    <h2>Katy's</h2>
+                    <p>San Salvador 1644 esquina Minas</p>
+                  </figcaption>
+                </figure>
+              </div>
+              <div class="flex_item">
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/logo/mirando_mundo.jpg" alt="">
+                  <figcaption>
+                    <h2>Mirando Mundos</h2>
+                    <p>Peatonal Sarandi 326</p>
+                  </figcaption>
+                </figure>
+              </div>
             </div>
           </div>
         </div>
