--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
         <link rel="icon" href="/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/main.css?v=1.3">
-        <link rel="stylesheet" href="css/responsive.css?v=1.3">
+        <link rel="stylesheet" href="css/main.css?v=1.4">
+        <link rel="stylesheet" href="css/responsive.css?v=1.4">
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
         <script src='https://www.google.com/recaptcha/api.js'></script>
     </head>
@@ -36,7 +36,12 @@
               <li class="logo"><a href="index.html"><img src="img/logo-battery-white.svg" alt=""></a></li>
               <li><a href="#easycharge">¿Quienes somos?</a></li>
               <li><a href="ec_show.html">SHOW</a></li>
-              <li><a href="ec_rent.html">RENT</a></li>
+              <li class="submenu">
+                <a href="ec_rent.html">RENT</a>
+                <div class="submenu_">
+                  <a href="ec_events.html">EVENTOS</a>
+                </div>
+              </li>
               <li><a href="anunciate.html">Anunciate</a></li>
               <li><a href="#encuentranos">Encontranos</a></li>
               <li><a href="#contacto">Contactanos</a></li>
