added new sites

--- a/ec_show.html
+++ b/ec_show.html
@@ -296,6 +296,52 @@
                   </figcaption>
                 </figure>
               </div>
+              <div class="flex_item">
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/logo/es_mercat.jpg" alt="">
+                  <figcaption>
+                    <h2>Es Mercat</h2>
+                    <p>Colón 1550</p>
+                  </figcaption>
+                </figure>
+              </div>
+              <div class="flex_item">
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/logo/tropical_smoothis.jpg" alt="">
+                  <figcaption>
+                    <h2>Tropical Smoothies</h2>
+                    <p>Buenos Aires 614</p>
+                  </figcaption>
+                </figure>
+              </div>
+              <div class="flex_item">
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/logo/lo_de_carola.jpg" alt="">
+                  <figcaption>
+                    <h2>Lo de Carola</h2>
+                    <p>José Ellauri 226</p>
+                    <p>Costa Rica 1683</p>
+                  </figcaption>
+                </figure>
+              </div>
+              <div class="flex_item">
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/logo/corunesa_cafe.jpg" alt="">
+                  <figcaption>
+                    <h2>Coruñesa Café</h2>
+                    <p>San José 1002</p>
+                  </figcaption>
+                </figure>
+              </div>
+              <div class="flex_item">
+                <figure class="tech_item" id="eight_gagdet">
+                  <img src="img/icon/logo/ruffino.jpg" alt="">
+                  <figcaption>
+                    <h2>Ruffino</h2>
+                    <p>San José 1166</p>
+                  </figcaption>
+                </figure>
+              </div>
             </div>
           </div>
         </div>
